--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,11 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-pydantic==2.5.2
-torch==2.0.0
-tensorflow==2.14.0
+pydantic==2.7.1
+torch==2.2.0
+torchvision==0.17.0
+tensorflow==2.17.1
 scikit-learn==1.3.2
-numpy==1.24.3
+numpy==1.26.4
 pandas==2.1.3
 opencv-python==4.8.1.78
 Pillow==10.1.0
@@ -15,4 +16,3 @@ redis==5.0.1
 psycopg2-binary==2.9.9
 pymongo==4.6.1
 boto3==1.33.2    # AWS S3 integration
-torchserve==0.8.2
